# p47h-open-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml
crates/app-if-ipc/: Cargo.toml
crates/app-if-ipc/src/: lib.rs
crates/app-utils/: Cargo.toml
crates/app-utils/fuzz/: Cargo.toml
crates/app-utils/fuzz/fuzz_targets/: fuzz_yaml_policy.rs
crates/app-utils/src/: error.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: crypto.rs  keystore.rs  main.rs
crates/cli/src/commands/: did.rs  mod.rs  policy.rs
crates/core-identity/: Cargo.toml
crates/core-identity/fuzz/: Cargo.toml
crates/core-identity/fuzz/fuzz_targets/: fuzz_identity_bytes.rs
crates/core-identity/src/: error.rs  hash.rs  lib.rs
crates/core-identity/tests/: identity_tests.rs
crates/core-policy/: Cargo.toml
crates/core-policy/benches/: path_bench.rs  policy_bench.rs
crates/core-policy/examples/: custom_resources.rs
crates/core-policy/fuzz/: Cargo.toml  README.md
crates/core-policy/fuzz/fuzz_targets/: fuzz_context_expr.rs  fuzz_path_pattern.rs  fuzz_policy_from_toml.rs  fuzz_wildcard_match.rs
crates/core-policy/src/: authorizer.rs  builder.rs  context_expr.rs  error.rs  lib.rs  path.rs  policy.rs  resource_matcher.rs
crates/core-policy/tests/: authorizer_tests.rs  builder_tests.rs  context_expr_integration_tests.rs  context_expr_properties.rs  context_expr_security.rs  context_expr_tests.rs  lsp_resource_matcher.rs  mutation_killers.rs  path_tests.rs  policy_deserialization_tests.rs  policy_tests.rs  t20_property_tests.rs
crates/p47h-engine/: Cargo.toml  package-lock.json
crates/p47h-engine/fuzz/: Cargo.toml
crates/p47h-engine/fuzz/fuzz_targets/: fuzz_resource_parser.rs  fuzz_vault_decrypt.rs
crates/p47h-engine/src/: client.rs  lib.rs  types.rs  utils.rs  validation.rs  vault.rs  wrappers.rs
crates/p47h-engine/tests/: client_tests.rs  resource_tests.rs  validation_tests.rs  web_tests.rs
crates/p47h-wasm-oss/: Cargo.toml
crates/p47h-wasm-oss/src/: lib.rs
examples/: simple_auth_flow.rs
src/: lib.rs
