[package]
name = "app-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility modules for application logic (YAML, audit, timestamps)"

[dependencies]
# --- CORE ---
core-policy = { workspace = true }

# --- PARSING & DATA ---
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

# --- ENCODING ---
hex = { workspace = true }

# --- ERROR HANDLING ---
thiserror = { workspace = true }

[features]
default = []