[package]
name = "p47h-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for P47H policy validation and DID management"

[[bin]]
name = "p47h"
path = "src/main.rs"

[dependencies]
# --- WORKSPACE CRATES ---
core-policy = { workspace = true }
core-identity = { workspace = true }

# --- CLI ---
clap = { workspace = true }
colored = "2.1"
dialoguer = "0.11"

# --- SERIALIZATION ---
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# --- CRYPTO ---
rand = { workspace = true }
hex = { workspace = true }
secrecy = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }

# --- ERROR HANDLING ---
anyhow = "1.0"
