[package]
name = "core-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity management and DID resolution for P47H"
keywords = ["crypto", "ed25519", "identity", "did"]
categories = ["cryptography", "no-std"]

[dependencies]
# --- CRYPTOGRAPHY ---
ed25519-dalek = { workspace = true, features = ["alloc", "zeroize"] }
rand_core = { workspace = true } 
zeroize = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] } # WASM support 

# --- SERIALIZATION ---
serde = { workspace = true, features = ["derive"] }

# --- ERRORS ---
thiserror = { workspace = true }

# --- SECURITY ---
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
hex = { workspace = true }
serde_json = "1.0"